# test-task-fullstack

./: README.md
backend/: .env  .gitignore  applications.db  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/core/: config.py  enums.py  logger.py
backend/src/core/base/: dependencies.py  models.py  schemas.py
backend/src/core/db/: session.py
backend/src/core/security/: password_manager.py  token_manager.py
backend/src/features/admin/: dependencies.py  exceptions.py  handlers.py  models.py  repositories.py  router.py  schemas.py  service.py
backend/src/features/application/: dependencies.py  exceptions.py  handlers.py  models.py  repositories.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_admin_service.py  test_application_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: adminApi.ts  applicationApi.ts  client.ts
frontend/src/context/: AdminContext.tsx
frontend/src/features/admin/: AdminManagementModal.tsx  AdminPanel.tsx  ChangePasswordModal.tsx  ConfirmModal.tsx  LoginModal.tsx  PasswordModal.tsx
frontend/src/features/applications/: ApplicationForm.tsx  ApplicationItem.tsx  ApplicationList.tsx  ApplicationSearchForm.tsx  ConfirmModal.tsx
frontend/src/hooks/: useSelection.ts
frontend/src/types/: application.ts
